@@ -1,3 +1,4 @@
+* [Bug 796] Clean up duplicate #defines in ntp_control.c.
 * [Bug 569] Use the correct precision for the Leitch CSD-5300.
 * [Bug 795] Moved declaration of variable to top of function.
 * [Bug 798] ntpq [p typo crashes ntpq/ntpdc.
